Fixes some anomalies with complex forms in muti-registration...though we don't limit number of controls, we strip out static text controls and add horizontal scrolling [#981]

--- a/framework/modules/ecommerce/assets/css/eventregistration.css
+++ b/framework/modules/ecommerce/assets/css/eventregistration.css
@@ -116,6 +116,7 @@ show view
 
 .product .prod-price .sale-price {
     color:#f00;
+	vertical-align: sub;
 }
 
 #eventregform .text-control p.helper {
